feat: Modify dark mode border to ensure responsive mobile UI

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <div class="bio">
         <div class="vertical-line"></div>
+        <div class="vertical-divider"></div>
         <div>
          
           <h2>Kirsten Danica</h2>
