--- a/work.html
+++ b/work.html
@@ -11,14 +11,14 @@
     <!-- LEFT SIDE -->
     <aside class="left">
       <div class="socials">
-        <span>HOME</span>
+        <a href="index.html">HOME</a>
       </div>
-
+    
       <div class="bio">
         <div class="vertical-line"></div>
         <div>
           <h3>WORK</h3>
-          <p>Showcasing the best examples of my work across the board in a variety of fields.</p>
+          <p>Showcasing some of my proudest pieces of work; all represent strong skillset and or focus on a specific field of the variety!</p>
           <br>
           <p>The world of design and development constantly evolves - I evolve with it. Every day I learn something new and I seek to gain new skills indefinitely!</p>
         </div>
